--- a/index.html
+++ b/index.html
@@ -13,11 +13,9 @@
         margin: 0;
         overflow: hidden;
         background-color: #000;
-        font-family:
-          -apple-system, BlinkMacSystemFont, "Helvetica Neue", sans-serif;
+        font-family: sans-serif;
       }
 
-      /* تیره تر کردن کادر با حفظ شفافیت */
       #main-panel {
         position: absolute;
         bottom: 40px;
@@ -25,7 +23,6 @@
         transform: translateX(-50%);
         width: 82%;
         max-width: 380px;
-        /* تغییر از رنگ سفید بسیار شفاف به مشکی ملایم شیشه ای */
         background: rgba(0, 0, 0, 0.6);
         backdrop-filter: blur(25px) saturate(160%);
         -webkit-backdrop-filter: blur(25px) saturate(160%);
@@ -33,11 +30,8 @@
         display: flex;
         align-items: center;
         padding: 8px 12px;
-        /* کادر نئونی با وضوح کمی بیشتر برای تضاد با سیاهی */
         border: 0.5px solid rgba(255, 255, 255, 0.25);
-        box-shadow:
-          0 10px 30px rgba(0, 0, 0, 0.5),
-          inset 0 0 1px rgba(255, 255, 255, 0.1);
+        box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5);
         z-index: 1000;
       }
 
@@ -48,14 +42,8 @@
         background: #ffffff;
         cursor: pointer;
         flex-shrink: 0;
-        margin-left: 5px;
         border: none;
-        box-shadow: 0 0 12px rgba(255, 255, 255, 0.2);
         transition: all 0.3s ease;
-      }
-
-      #color-btn:active {
-        transform: scale(0.8);
       }
 
       #input-wrapper {
@@ -70,13 +58,8 @@
         font-size: 13px;
         width: 100%;
         outline: none;
-        font-weight: 300;
         letter-spacing: 2px;
         text-transform: uppercase;
-      }
-
-      input::placeholder {
-        color: rgba(255, 255, 255, 0.25);
       }
 
       .divider {
@@ -91,11 +74,7 @@
         height: 36px;
         background: transparent;
         border: none;
-        display: flex;
-        justify-content: center;
-        align-items: center;
         cursor: pointer;
-        flex-shrink: 0;
       }
 
       .arrow-svg {
@@ -125,7 +104,7 @@
     </div>
 
     <a-scene
-      mindar-image="imageTargetSrc: ./targets.mind;"
+      mindar-image="imageTargetSrc: ./targets/targets.mind; uiScanning: no;"
       vr-mode-ui="enabled: false"
       device-orientation-permission-ui="enabled: false"
       renderer="antialias: true; alpha: true">
@@ -155,11 +134,7 @@
 
       colorBtn.addEventListener("click", () => {
         isWhite = !isWhite;
-        const newColor = isWhite ? "#FFFFFF" : "#000000";
-        colorBtn.style.backgroundColor = newColor;
-        colorBtn.style.boxShadow = isWhite
-          ? "0 0 12px rgba(255, 255, 255, 0.2)"
-          : "0 0 12px rgba(0, 0, 0, 0.5)";
+        colorBtn.style.backgroundColor = isWhite ? "#FFFFFF" : "#000000";
       });
 
       submitBtn.addEventListener("click", () => {
