--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     </div>
 
     <a-scene
-      mindar-image="imageTargetSrc: ./targets/targets.mind; uiScanning: no;"
+      mindar-image="imageTargetSrc: ./Targets/targets.mind; uiScanning: no;"
       vr-mode-ui="enabled: false"
       renderer="antialias: true; alpha: true">
       <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
