--- a/index.html
+++ b/index.html
@@ -3,13 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AR Tag - Firebase Edition</title>
+    <title>AR Tag - Clean Single Background</title>
 
     <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.5/dist/mindar-image-aframe.prod.js"></script>
 
     <style>
-      /* استایل‌های پایه صفحه */
       body {
         margin: 0;
         overflow: hidden;
@@ -17,7 +16,6 @@
         font-family: sans-serif;
       }
 
-      /* پنل شیشه‌ای پایین صفحه */
       #main-panel {
         position: absolute;
         bottom: 40px;
@@ -33,10 +31,8 @@
         background: rgba(0, 0, 0, 0.7);
         backdrop-filter: blur(20px);
         border: 0.5px solid rgba(255, 255, 255, 0.2);
-        box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5);
       }
 
-      /* دکمه انتخاب رنگ (سیاه/سفید) */
       #color-btn {
         width: 28px;
         height: 28px;
@@ -46,45 +42,57 @@
         border: 1px solid rgba(255, 255, 255, 0.2);
       }
 
-      /* کادر ورودی متن */
-      input {
+      #input-wrapper {
         flex-grow: 1;
+        padding: 0 12px;
+      }
+
+      input {
         background: transparent;
         border: none;
         color: #fff;
-        padding: 0 15px;
+        font-size: 13px;
+        width: 100%;
         outline: none;
         letter-spacing: 1.5px;
         text-transform: uppercase;
       }
 
-      /* دکمه ارسال (فلش) */
+      .divider {
+        width: 1px;
+        height: 16px;
+        background: rgba(255, 255, 255, 0.15);
+        margin: 0 5px;
+      }
+
       #submit-btn {
         background: transparent;
         border: none;
         cursor: pointer;
       }
+
       .arrow-svg {
         stroke: #fff;
         stroke-width: 2;
         fill: none;
       }
-      .divider {
-        width: 1px;
-        height: 16px;
-        background: rgba(255, 255, 255, 0.15);
-      }
     </style>
   </head>
+
   <body>
+    <!-- UI PANEL -->
     <div id="main-panel">
-      <div id="color-btn" title="Toggle Color"></div>
+      <div id="color-btn"></div>
       <div class="divider"></div>
-      <input
-        type="text"
-        id="user-text"
-        placeholder="LEAVE A TAG..."
-        maxlength="20" />
+
+      <div id="input-wrapper">
+        <input
+          type="text"
+          id="user-text"
+          placeholder="LEAVE A TAG..."
+          maxlength="15" />
+      </div>
+
       <button id="submit-btn">
         <svg width="18" height="18" viewBox="0 0 24 24">
           <path class="arrow-svg" d="M12 19V5M5 12l7-7 7 7" />
@@ -92,16 +100,19 @@
       </button>
     </div>
 
+    <!-- AR SCENE -->
     <a-scene
-      mindar-image="imageTargetSrc: ./Targets/targets.mind; uiScanning: no;"
+      mindar-image="imageTargetSrc: ./Targets/targets.mind; uiScanning: no; filterMinCF: 0.0001; filterBeta: 0.001; missTolerance: 500; warmupTolerance: 1;"
       vr-mode-ui="enabled: false"
-      renderer="antialias: true; alpha: true">
+      device-orientation-permission-ui="enabled: false"
+      renderer="antialias: true; alpha: true; logarithmicDepthBuffer: true;">
       <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
-      <a-entity
-        id="target-anchor"
-        mindar-image-target="targetIndex: 0"></a-entity>
+
+      <a-entity id="target-anchor" mindar-image-target="targetIndex: 0">
+      </a-entity>
     </a-scene>
 
+    <!-- SCRIPT -->
     <script type="module">
       import { initializeApp } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-app.js";
       import {
@@ -111,7 +122,6 @@
         onChildAdded,
       } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-database.js";
 
-      // تنظیمات فایربیس (با اطلاعات صحیح شما)
       const firebaseConfig = {
         apiKey: "AIzaSyC-3C2JeR33zqqUxSkGrZoMckqXezJgRcY",
         authDomain: "b13artag26v01.firebaseapp.com",
@@ -123,12 +133,10 @@
         appId: "1:244929806839:web:e0352f4d0717ca73b26ef2",
       };
 
-      // راه اندازی فایربیس
       const app = initializeApp(firebaseConfig);
       const db = getDatabase(app);
       const dbRef = ref(db, "ar_tags");
 
-      // المان‌های صفحه
       const input = document.getElementById("user-text");
       const colorBtn = document.getElementById("color-btn");
       const submitBtn = document.getElementById("submit-btn");
@@ -136,13 +144,11 @@
 
       let isWhite = true;
 
-      // تغییر رنگ دکمه
       colorBtn.addEventListener("click", () => {
         isWhite = !isWhite;
         colorBtn.style.backgroundColor = isWhite ? "#FFFFFF" : "#000000";
       });
 
-      // ارسال داده به فایربیس
       const sendTag = () => {
         const val = input.value.trim().toUpperCase();
         if (!val) return;
@@ -153,9 +159,10 @@
           pos: {
             x: (Math.random() - 0.5) * 1.5,
             y: (Math.random() - 0.5) * 1.5,
-            z: Math.random() * 0.1,
+            z: 0.01,
           },
         });
+
         input.value = "";
       };
 
@@ -164,25 +171,24 @@
         if (e.key === "Enter") sendTag();
       });
 
-      // دریافت داده‌ها و ساختن تگ‌ها در فضای AR
       onChildAdded(dbRef, (snapshot) => {
         const data = snapshot.val();
+
         const textEl = document.createElement("a-text");
 
         textEl.setAttribute("value", data.text);
         textEl.setAttribute("color", data.color);
         textEl.setAttribute("align", "center");
-        textEl.setAttribute("width", "2.5");
-        textEl.setAttribute("shader", "msdf");
+        textEl.setAttribute("width", "1.2");
+        textEl.setAttribute("wrap-count", "20");
+        textEl.setAttribute("font", "roboto");
+        textEl.setAttribute(
+          "material",
+          "transparent: true; side: double; depthTest: false;",
+        );
         textEl.setAttribute(
           "position",
           `${data.pos.x} ${data.pos.y} ${data.pos.z}`,
-        );
-
-        // انیمیشن ظاهر شدن
-        textEl.setAttribute(
-          "animation",
-          "property: opacity; from: 0; to: 1; dur: 800; easing: easeOutQuad",
         );
 
         anchor.appendChild(textEl);
